--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Pizza Builder</title>
     <!-- Styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.3/angular-material.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel='stylesheet' href='./dist/all.css'/>
@@ -33,18 +34,34 @@
                     </h2>
                     <p>{{pizza.description}}
                     </p>
-                    <md-menu ng-if='showToppingsButton' md-offset="0 -5">
-                      <md-button class='addtopping' aria-label="Add Topping" ng-click="openMenu($mdMenu, $event)">
-                        <i class="fa fa-plus" aria-hidden="true"></i>Add Topping
-                      </md-button>
-                      <md-menu-content width="4" class='selectNewToppingList'>
-                        <md-menu-item ng-repeat="topping in toppings | unique: 'name'  | orderBy:'name' track by topping.id">
-                          <md-button aria-label='{{topping.name}}' ng-click="addToppingToPizza(pizza.id, topping.id)">
-                            <span md-menu-align-target>{{topping.name}}
+                    <div class="pizzaOptions">
+                      <!-- Add toppings -->
+                      <md-menu ng-if='showToppingsButton' md-offset="0 -5">
+                        <md-button class='addtopping' aria-label="Add Topping" ng-click="openMenu($mdMenu, $event)">
+                          <i class="fa fa-plus" aria-hidden="true"></i>Add Topping
+                        </md-button>
+                        <md-menu-content width="4" class='selectNewToppingList'>
+                          <md-menu-item ng-repeat="topping in toppings | unique: 'name'  | orderBy:'name' track by topping.id">
+                            <md-button aria-label='{{topping.name}}' ng-click="addToppingToPizza(pizza.id, topping.id)">
+                              <span md-menu-align-target>{{topping.name}}
+                              </md-button>
+                            </md-menu-item>
+                          </md-menu-content>
+                        </md-menu>
+                        <!-- Add pizza to order -->
+                        <md-menu ng-if='showToppingsButton' md-offset="0 -5">
+                          <md-button class='addtopping' aria-label="Add To Order" ng-click="openMenu($mdMenu, $event)">
+                            <i class="fa fa-plus" aria-hidden="true"></i>Add To Order
                           </md-button>
-                          </md-menu-item>
-                        </md-menu-content>
-                      </md-menu>
+                          <md-menu-content width="4" class='selectNewToppingList'>
+                            <md-menu-item ng-repeat="order in orders | unique: 'name'  | orderBy:'-id' track by order.id">
+                              <md-button aria-label='{{order.name}}' ng-click="addPizzaToOrder(pizza.id, pizza.name, order.id)">
+                                <span md-menu-align-target>{{order.name}}
+                              </md-button>
+                            </md-menu-item>
+                          </md-menu-content>
+                        </md-menu>
+                    </div>
                     </div>
                     <md-chips class='targetToppingsList'>
                       <md-chip class='targetToppings repeat-animation' ng-repeat="topping in targettoppings | filter:pizza.id | unique: 'name'" ng-if='showTargetToppings'>{{topping.name}}
@@ -65,6 +82,13 @@
             <p>Pizza // Topping
             </p>
         </div>
+        <div layout="column" class='addPizzaBtn addOrderBtn'>
+          <md-button aria-label='Add an Order'ng-click="toggleRight2()">
+              <i class="fa fa-plus" aria-hidden="true"></i>
+          </md-button>
+            <p>Orders
+            </p>
+        </div>
       </div>
       <!-- PIZZA BANNER -->
       <div class="pizzaBanner">
@@ -82,8 +106,7 @@
             <md-input-container>
               <label for="testInput">Pizza Name
               </label>
-              <input type="text" id="testInput"
-              ng-model="newPizzaName" md-autofocus>
+              <input type="text" id="testInput" ng-model="newPizzaName" md-autofocus>
             </md-input-container>
             <md-input-container class="md-block">
               <label for="pizzaDesc">Pizza Description
@@ -98,17 +121,44 @@
             <md-input-container>
               <label for="testInput">Topping Name
               </label>
-              <input type="text" id="testInput"
-              ng-model="newToppingName" md-autofocus>
+              <input type="text" id="testInput" ng-model="newToppingName" md-autofocus>
             </md-input-container>
             <md-button class="md-raised" ng-click='addNewTopping()'>Submit
             </md-button>
           </form>
         </md-content>
       </md-sidenav>
+      <!-- ORDER BUILDER -->
+      <md-sidenav class="orderBuilder md-sidenav-right md-whiteframe-4dp" md-component-id="right2" >
+        <md-toolbar class="md-theme-light">
+          <h1 class="md-toolbar-tools">Add // View Orders
+          </h1>
+        </md-toolbar>
+        <md-content layout-padding>
+          <form class='orderForm'>
+            <md-input-container>
+              <label for="testInput">Order Name
+              </label>
+              <input type="text" id="testInput" ng-model="newOrderName" md-autofocus>
+            </md-input-container>
+            <md-button class="md-raised" ng-click='addNewOrder()'>Submit
+            </md-button>
+          </form>
+          <ul class="collapsible" data-collapsible="accordion" watch>
+            <li ng-repeat="order in orders | orderBy:'-id'">
+              <div class="collapsible-header">{{order.name}}</div>
+              <div class="collapsible-body"><p ng-repeat="pizza in order.pizzas track by $index">{{pizza}}</p></div>
+            </li>
+          </ul>
+        </md-content>
+      </md-sidenav>
+
+
     <!--  -->
     </div>
     <!-- Scripts -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.js">
@@ -118,7 +168,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.3/angular-material.js">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.14/angular-filter.min.js">
-    </script>    <script type='text/javascript' src='./dist/all.js'>
+    </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js">
+    </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js">
+    </script>
+    <script type='text/javascript' src='./dist/all.js'>
     </script>
   </body>
 </html>
